# otus-homework3

./: CMakeLists.txt  file_managment.cpp  file_managment.h  guess.cpp  guess.h  main.cpp  random_value.cpp  random_value.h
